[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capctl = "0.2.0"
cgroups-rs = "0.2.6"
env_logger = "0.9.0"
libc = "0.2.102"
log = "0.4.14"
nix = "0.22.1"
rand = "0.8.4"
rlimit = "0.6.2"
scan_fmt = "0.2.6"
structopt = "0.3.23"
syscallz = "0.16.1"